--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
-    "bootstrap-vue": "^2.0.0",
+    "@nuxtjs/axios": "^5.3.6",
     "bootstrap": "^4.1.3",
-    "@nuxtjs/axios": "^5.3.6"
+    "bootstrap-vue": "^2.0.0",
+    "jquery": "^3.5.1",
+    "nuxt": "^2.0.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^2.0.0",
